--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ deploy:
   skip_cleanup: true
   github_token: $GITHUB_TOKEN_2 # Set in the settings page of your repository, as a secure variable
   keep_history: true
+  repo: dalice157/dalice157.github.io
   on:
     branch: main
 install:
